tweaked the design a little and added more content
reduced the amount of colors

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div id="web">
                 <h2>web development</h2>
                 <div id="rick">
-                    <img src="img/rick.jpg" width="20%" height="auto">
+                    <img src="img/rick.jpg" width="560px" height="auto">
                     <h3>Rick and Morty Search (JavaScript with REST API) <a href="https://people.rit.edu/vd5443/235/project2/">
                         <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>I developed a Rick and Morty search engine website, integrating a REST API with JavaScript, HTML, and CSS. 
@@ -65,7 +65,7 @@
                 </div>
 
                 <div id="dress-up">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/7BPSiUE2d_E?si=pvvsK-UW_AT8xnp9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="300" src="https://www.youtube.com/embed/7BPSiUE2d_E?si=pvvsK-UW_AT8xnp9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h3>Sarah's Dress Up (JavaScript PIXI) <a href="https://people.rit.edu/vd5443/235/project3/">
                         <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>Developed a dress-up game for Sarah using PIXI.js, HTML, CSS, and JavaScript. The objective was to create an interactive experience for players to customize avatars.
@@ -89,7 +89,7 @@
                 </div>
 
                 <div id="blood-of-christ">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/r1dVFSVRA6Q?si=qUyH5DTKnrlCBQJ2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="300" src="https://www.youtube.com/embed/r1dVFSVRA6Q?si=qUyH5DTKnrlCBQJ2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h3>Blood of Christ (C# Monogame)<a href="https://github.com/yaboiedchoi/Blood-of-Christ"><img src="img/logo.png" height= 2.5% width="auto"></a> </h3>
                     <p>Collaborated with a team of four to develop a Monogame project using C# .NET. My specific responsibilities included implementing the firing system and player movement mechanics and contributing to integrating path-finding functionalities.</p>
                     <p>Focused on creating a robust firing system and smooth player movement to enhance the game's interactivity and user experience. </p>
@@ -99,11 +99,18 @@
                 </div>
 
                <!--add unity level design from 219-->
+               <div id="level-design">
+                <h3>Subway Level Design</h3>
+                <iframe width="560" height="300" src="https://www.youtube.com/embed/FCGxpZGCM90?si=hrCfWnYweeUdDDkk&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>I had developed it using Autodesk Maya 3D and Adobe Substance Painter for my final project. I had used <a href="https://assetstore.unity.com/packages/essentials/starterassets-firstperson-updates-in-new-charactercontroller-pac-196525
+                    ">this</a> template to make the gameplay in the unity.</p>
+                <P>I had chosen to make an abadoned subway station with graffiti elements as I had tried to add graffitis on the trash cans and have a colorful subway. This project had taught me about 3D Design and its importance on clean geometry. All the assets that are the subway station, subway, rails, benches, trash cans, etc. are designed by me. I wanted to play with Substance Painter as I had added textures from images to make McDonalds advertisements and to make them glow. In addition, I had uv unwrapped them on my own to ensure that the materials sit well on the models. It was a fun project as it taught me how to pick up softwares like Maya quickly and I was able to learn Blender with a similar strategy a lot faster.</P>
+               </div>
 
                 <div id="happy-taxing">
                     <h3>Happy Taxing (Unity 2D) <a href="https://github.com/vaibhavyxx/Happy-Taxing-2"><img src="img/logo.png" height= 2.5% width="auto"></a> <i>WicHacks Hackathon entry</i></h3>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ROEuNN_UvWY?si=g2J3ipg5xocB0ELh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <p>Worked in a team of two: <a href="">Edward Choi</a> and <a href="">Lisa Pham</a> to make a finance based game.
+                    <iframe width="560" height="300" src="https://www.youtube.com/embed/ROEuNN_UvWY?si=g2J3ipg5xocB0ELh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p>Worked in a team of two: Edward Choi and Lisa Pham to make a finance based game.
                     Finances are often the most challenging part of being an adult. It is something that can make or break your future, like a good credit score can give you a lower interest on a car and how one should maintain it. However, nobody really teaches finance so we wanted to make a fun immersive game to get children interested in finance and become financially literal.</p>
                     <p>For the first draft of this game, we had tried to use JavaScript's PIXI Library but due to difficulties we had switched it to Unity 2D with C# .Net using GitHub.</p>
                     <p>Initially, we tried to use JavaScript's Pixi Library to make the game on web browser but there was difficulty uploading textures. So, after a few failed attempts, we tried to build this game again with Unity using GitHub for version control. Since, it was our first time using Git simultaneously, we ran into a lot of merge issues which made us make a backup repository. Luckily, most of our merges were solved out and we worked pretty fast to get our barebones done.</p>
@@ -116,7 +123,7 @@
                 <h2>xr</h2>
 
                 <div id="suburbs">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IssyYAXx_MU?si=F5RQ_Pw_AymdLA4B&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="300" src="https://www.youtube.com/embed/IssyYAXx_MU?si=F5RQ_Pw_AymdLA4B&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h3>Suburbs</h3> <!--  <a href="https://github.com/IGME-209/dsa1-spring24-vaibhavyxx/tree/master/HW1/Hangman"><img src="img/logo.png" height= 2.5% width="auto"></a></a></h3>-->
                     <p>As a dedicated intern at a European company with an AR division in India, I had the opportunity to work on a groundbreaking project that combined augmented reality (AR) technology with web-based advertising for products. Leveraging my skills in HTML, CSS, JavaScript, and the A-Frame library, I developed a virtual environment of suburbs during my training period. This project received high praise from the company's founder, who recognized it as one of the best projects created by an intern.</p>
                     <p>The goal of this project was to explore the potential of web-based AR for advertising products in a virtual environment. By integrating AR technology into a web-based platform, we aimed to create an immersive and interactive experience for users to engage with various products in a suburban setting.</p>
@@ -128,14 +135,15 @@
                         <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>Designed with Meta Spark AR and Gimp, it was a fun project where users could appear like they were blusing. I was inspired by Valentine's day and I added  a LUT package that I had found online which would give pink tones to the filter. In addition, I had animated snowflakes falling onto the screen while I had found the snowflakes from Google Images.</p>
                     <p>Take a look <a href="https://youtube.com/shorts/3JT2-3xf0Bo?feature=shared">here</a>!</p>
-                    <iframe src="https://youtube.com/shorts/3JT2-3xf0Bo?feature=shared" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+                    
                 </div>
 
-                <div id="marker-based">
-                    <h3>AR Demo <a href="https://people.rit.edu/vd5443/AR-Demo/">Play Here!</a> </h3>
-                    <video src="img/AR-Demo-Preview.mp4" alt="A Preview of how it looks like" autoplay></video>
+                <div id="ar-demo">
+                    <h3>AR Demo <a href="https://people.rit.edu/vd5443/AR-Demo/"><img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a><a href="https://github.com/vaibhavyxx/AR-Demo"><img src="img/logo.png" height= 2.5% width="auto"></a> </h3>
                     <h4>Use this picture so that it works!</h4>
-                    <img src="img/pattern-marker.png" src="Picture to use for AR Marker to work">
+                    <img src="img/pattern-marker.png" src="Picture to use for AR Marker to work" >
+                    <h4>Preview of how it works</h4>
+                    <video controls loop><source src ="img/AR-Demo-Preview.mp4" alt="A Preview of how it looks like" width="50%" height="auto"></video>
                     <p>Developed using Ar.js and A-frame libraries along with HTML, CSS and JavaScript, it is a marker-based Web AR project. Since it is a web AR project, I had focused on polycount and stats for the scene to avoid phones from overheating so that everyone could try this experience out. I also wanted to develop my Garden project further into Augmented Reality so I had designed the house via code. I had added a sphere on top which would revolve arounf the house, similar to how in the original project, the UFO revolved in the sky. Adding on, I had ensured that my textures were added to specific faces of the shape so I had use libraries for those things. 
                         For the marker, I had a lot of difficulties in creating one so I had used one from <a href="https://jeromeetienne.github.io/AR.js/three.js/examples/marker-training/examples/generator.html">this </a> site which would show all these designs.
                     </p>
@@ -144,29 +152,23 @@
 
             <div id="graphic-design">
                 <h2>graphic design</h2>
+                <p>I have made all these designs using Canva. Hence, all the artwork used in it is from Canva's library. I prefer using Canva as I have to finish these designs in a day's time to still be relevant with the guest speakers talks.</p>
                 <div id="music">
                     <h3>Thank You Card for Akira Takeuchi</h3>
-                    <img src="img/Akira Takeuchi.png" src="A virtual card to thank Akira Takeuchi" width="70%" height="auto">
+                    <img src="img/Akira Takeuchi.png" src="A virtual card to thank Akira Takeuchi" width="30%" height="auto">
+                    <p>The guest speaker who had spoken that day is a talented musician so I wanted to give it a Broadway mood to it. Hence, I had tried to make it look musical.</p>
                 </div>
 
                 <div id="turtles">
                     <h3>Thank You Card for Emily</h3>
-                    <img src="img/Thank you.png" src="A virtual card for Emily" width="70%" height="auto">
-                </div>
-
-                <div id="smilies">
-                    <h3>Thank You Card for Malcom</h3>
-                    <img src="img/thank you (1).png" src="A virtual card for Malcom" width="70%" height="auto">
+                    <img src="img/Thank you.png" src="A virtual card for Emily" width="30%" height="auto">
+                    <p>The guest speaker that day had expressed her love for turtles and wanting to have an office turtles. She had joked that those turtles would be tied to a balloon to avoid people walking on it. Hence, those circles are supposed to represent the balloons with what the students were thinking about the class.</p>
                 </div>
 
                 <div id="butterfly">
                     <h3>Thank You Card for Butterfly Garden</h3>
-                    <img src="img/ling.png" src="A virtual card for Butterfly Garden" width="70%" height="auto">
-                </div>
-
-                <div id="flyer">
-                    <h3>Flyer for an Upcoming Class</h3>
-                    <img src="img/Flyer.png" width="70%" height="auto">
+                    <img src="img/ling.png" src="A virtual card for Butterfly Garden" width="30%" height="auto">
+                    <p>The speakers that day were representing Strong Musuem of Play and how they had used an AR exhbit to encourage donations to the musuem. After their talk, I wanted to have a feminine feel to it and hence used colors ranging from pink to maroon. I was inpired by Barbie with the fonts and wanted it to feel fairy like. Since butterflies are so pretty and mystical.</p>
                 </div>
             </div>
         </div>
