changed the margin to make it more responsive

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div id="web">
                 <h2>web development</h2>
                 <div id="rick">
-                    <img src="img/rick.jpg" width="560px" height="auto">
+                    <img src="img/rick.jpg" width="150px" height="auto">
                     <h3>Rick and Morty Search (JavaScript with REST API) <a href="https://people.rit.edu/vd5443/235/project2/">
                         <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>I developed a Rick and Morty search engine website, integrating a REST API with JavaScript, HTML, and CSS. 
@@ -81,6 +81,7 @@
                 <h2>games</h2>
 
                 <div id="chaos-of-the-duck">
+                    <h3>Chaos of the Duck</h3>
 
                 </div>
 
