added more skills

--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
                 <li>Unity</li>
                 <li>HTML, CSS</li>
                 <li>Javascript</li>
-                <li>C Sharp</li>
+                <li>C#</li>
                 <li>C++</li>
                 <li>Figma</li>
                 <li>Metaspark AR</li>
+                <li>A-frame</li>
+                <li>Ar.js</li>
+                <li>Adobe Substance Painter</li>
             </ul>
         </div>
         
