--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <body>
         <div id="nav">
             <ul>
-                
                 <li><a href="#intro"><img src="img/home.png" ></a></li>
                     <li><a href="#projects">projects</a></li>
                 <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linkedin</a></li>
                 <li><a href="https://github.com/vaibhavyxx">github</a></li>
-                <li></li>
+                <li><a href="">resume</a></li>
                 <li><a href="#talk">let's talk</a></li>
             </ul>
         </div>
@@ -99,7 +98,7 @@
                 </div>
 
                 <div id="dress-up">
-                    <iframe width="560" height="300" src="https://www.youtube.com/embed/7BPSiUE2d_E?si=pvvsK-UW_AT8xnp9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="550" height="315" src="https://www.youtube.com/embed/7BPSiUE2d_E?si=pvvsK-UW_AT8xnp9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h3>Sarah's Dress Up (JavaScript PIXI) <a href="https://people.rit.edu/vd5443/235/project3/">
                         <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>Developed a dress-up game for Sarah using PIXI.js, HTML, CSS, and JavaScript. The objective was to create an interactive experience for players to customize avatars.
@@ -114,17 +113,15 @@
             <div id="games">
                 <h2>games</h2>
 
-                <div id="chaos-of-the-duck">
-                    <h3>Chaos of the Duck (Physical Game)</h3>
-
-                </div>
-
                 <div id="alien-invasion">
                     <h3>Alien Invasions (Board Game)</h3>
+                    <img src="img/aliens-game.png" src="Board Game">
+                    <p>It is a strategy board game where players have to play as alien and ducks. It is an area control game where aliens have to guess the amount of ducks are present. It is an academic project where I had worked in a team of 5 people. I was responsible for updating the design document, finding playtesters for this game and improve the balance of the game. Since it was my first time building a board game, it had taught a lot about balance and how crucial is it for your game to be fun. </p>
+                    <p><i>Read our <a href="https://docs.google.com/document/d/1hmG3Jw35hQb6FrqBQ5HL-0hen_l1Y0BA0sBmtQfHwOk/edit?usp=sharing"> design document</a> to know more!</i></p>
                 </div>
 
                 <div id="blood-of-christ">
-                    <iframe width="560" height="300" src="https://www.youtube.com/embed/r1dVFSVRA6Q?si=qUyH5DTKnrlCBQJ2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="550" height="315" src="https://www.youtube.com/embed/r1dVFSVRA6Q?si=qUyH5DTKnrlCBQJ2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h3>Blood of Christ (C# Monogame)<a href="https://github.com/yaboiedchoi/Blood-of-Christ"><img src="img/logo.png" height= 2.5% width="auto"></a> </h3>
                     <p>Collaborated with a team of four to develop a Monogame project using C# .NET. My specific responsibilities included implementing the firing system and player movement mechanics and contributing to integrating path-finding functionalities.</p>
                     <p>Focused on creating a robust firing system and smooth player movement to enhance the game's interactivity and user experience. </p>
@@ -133,10 +130,9 @@
                     </p>
                 </div>
 
-               <!--add unity level design from 219-->
                <div id="level-design">
                 <h3>Subway Level Design</h3>
-                <iframe width="560" height="300" src="https://www.youtube.com/embed/FCGxpZGCM90?si=hrCfWnYweeUdDDkk&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="550" height="315" src="https://www.youtube.com/embed/FCGxpZGCM90?si=hrCfWnYweeUdDDkk&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>I had developed it using Autodesk Maya 3D and Adobe Substance Painter for my final project. I had used <a href="https://assetstore.unity.com/packages/essentials/starterassets-firstperson-updates-in-new-charactercontroller-pac-196525
                     ">this</a> template to make the gameplay in the unity.</p>
                 <P>I had chosen to make an abadoned subway station with graffiti elements as I had tried to add graffitis on the trash cans and have a colorful subway. This project had taught me about 3D Design and its importance on clean geometry. All the assets that are the subway station, subway, rails, benches, trash cans, etc. are designed by me. I wanted to play with Substance Painter as I had added textures from images to make McDonalds advertisements and to make them glow. In addition, I had uv unwrapped them on my own to ensure that the materials sit well on the models. It was a fun project as it taught me how to pick up softwares like Maya quickly and I was able to learn Blender with a similar strategy a lot faster.</P>
@@ -144,13 +140,18 @@
 
                 <div id="happy-taxing">
                     <h3>Happy Taxing (Unity 2D) <a href="https://github.com/vaibhavyxx/Happy-Taxing-2"><img src="img/logo.png" height= 2.5% width="auto"></a> <i>WicHacks Hackathon entry</i></h3>
-                    <iframe width="560" height="300" src="https://www.youtube.com/embed/ROEuNN_UvWY?si=g2J3ipg5xocB0ELh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="550" height="315" src="https://www.youtube.com/embed/ROEuNN_UvWY?si=g2J3ipg5xocB0ELh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <p>Worked in a team of two: Edward Choi and Lisa Pham to make a finance based game.
                     Finances are often the most challenging part of being an adult. It is something that can make or break your future, like a good credit score can give you a lower interest on a car and how one should maintain it. However, nobody really teaches finance so we wanted to make a fun immersive game to get children interested in finance and become financially literal.</p>
                     <p>For the first draft of this game, we had tried to use JavaScript's PIXI Library but due to difficulties we had switched it to Unity 2D with C# .Net using GitHub.</p>
                     <p>Initially, we tried to use JavaScript's Pixi Library to make the game on web browser but there was difficulty uploading textures. So, after a few failed attempts, we tried to build this game again with Unity using GitHub for version control. Since, it was our first time using Git simultaneously, we ran into a lot of merge issues which made us make a backup repository. Luckily, most of our merges were solved out and we worked pretty fast to get our barebones done.</p>
                     <p><i>Read the <a href="https://devpost.com/software/happy-taxing">devpost</a> to know more! </i></p>
-                    
+                </div>
+
+                <div id="duck-in-the-chaos">
+                    <h3>Duck in the Chaos (Physical Game)</h3>
+                    <img src="img/duck-in-the-chaos.jpeg" alt="game" width="550" height="auto">
+                    <p></p>
                 </div>
             </div>
 
