added more content and fixed the layout

--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
                     <p>My experience working on this web-based AR advertising project has been immensely rewarding and has provided valuable insights into the intersection of technology and marketing. I am proud to have contributed to the company's innovative initiatives and look forward to exploring more opportunities for leveraging AR technology in advertising and beyond.                    </p>
                 </div>
 
+                <div id="ar-demo">
+                    <h3>AR Demo <a href="https://people.rit.edu/vd5443/AR-Demo/"><img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a><a href="https://github.com/vaibhavyxx/AR-Demo"><img src="img/logo.png" height= 2.5% width="auto"></a> </h3>
+                    <h4>Use this picture so that it works!</h4>
+                    <img src="img/pattern-marker.png" src="Picture to use for AR Marker to work" width="400" height="400">
+                    <h4>Preview of how it works</h4>
+                    <video controls loop><source src ="img/AR-Demo-Preview.mp4" alt="A Preview of how it looks like" width="550" height="auto"></video>
+                    <p>Developed using Ar.js and A-frame libraries along with HTML, CSS and JavaScript, it is a marker-based Web AR project. Since it is a web AR project, I had focused on polycount and stats for the scene to avoid phones from overheating so that everyone could try this experience out. I also wanted to develop my Garden project further into Augmented Reality so I had designed the house via code. I had added a sphere on top which would revolve arounf the house, similar to how in the original project, the UFO revolved in the sky. Adding on, I had ensured that my textures were added to specific faces of the shape so I had use libraries for those things. 
+                        For the marker, I had a lot of difficulties in creating one so I had used one from <a href="https://jeromeetienne.github.io/AR.js/three.js/examples/marker-training/examples/generator.html">this </a> site which would show all these designs.
+                    </p>
+                </div>
+
                 <div id="snowflakes">
                     <h3>Snowflakes Face Tracking Filter <a href="https://www.instagram.com/ar/235797232357120/?ch=MDE3NmE4YTQyYjAyMTA2NmVjYTJhNjQ2OTE5MTU5MjU%3D">
                         <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
@@ -72,23 +83,12 @@
                     <p>Take a look <a href="https://youtube.com/shorts/3JT2-3xf0Bo?feature=shared">here</a>!</p>
                     
                 </div>
-
-                <div id="ar-demo">
-                    <h3>AR Demo <a href="https://people.rit.edu/vd5443/AR-Demo/"><img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a><a href="https://github.com/vaibhavyxx/AR-Demo"><img src="img/logo.png" height= 2.5% width="auto"></a> </h3>
-                    <h4>Use this picture so that it works!</h4>
-                    <img src="img/pattern-marker.png" src="Picture to use for AR Marker to work" >
-                    <h4>Preview of how it works</h4>
-                    <video controls loop><source src ="img/AR-Demo-Preview.mp4" alt="A Preview of how it looks like" width="50%" height="auto"></video>
-                    <p>Developed using Ar.js and A-frame libraries along with HTML, CSS and JavaScript, it is a marker-based Web AR project. Since it is a web AR project, I had focused on polycount and stats for the scene to avoid phones from overheating so that everyone could try this experience out. I also wanted to develop my Garden project further into Augmented Reality so I had designed the house via code. I had added a sphere on top which would revolve arounf the house, similar to how in the original project, the UFO revolved in the sky. Adding on, I had ensured that my textures were added to specific faces of the shape so I had use libraries for those things. 
-                        For the marker, I had a lot of difficulties in creating one so I had used one from <a href="https://jeromeetienne.github.io/AR.js/three.js/examples/marker-training/examples/generator.html">this </a> site which would show all these designs.
-                    </p>
-                </div>
             </div>
 
             <div id="web">
                 <h2>web development</h2>
                 <div id="rick">
-                    <img src="img/rick.jpg" width="150px" height="auto">
+                    <img src="img/rick.jpg" width="550px" height="auto">
                     <h3>Rick and Morty Search (JavaScript with REST API) <a href="https://people.rit.edu/vd5443/235/project2/">
                         <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>I developed a Rick and Morty search engine website, integrating a REST API with JavaScript, HTML, and CSS. 
@@ -151,7 +151,7 @@
                 <div id="duck-in-the-chaos">
                     <h3>Duck in the Chaos (Physical Game)</h3>
                     <img src="img/duck-in-the-chaos.jpeg" alt="game" width="550" height="auto">
-                    <p></p>
+                    <p>I had worked in an interdisplinary team at a conference to design this game. I had made it on our subtopics of 'play'.</p>
                 </div>
             </div>
 
@@ -160,19 +160,19 @@
                 <p>I have made all these designs using Canva. Hence, all the artwork used in it is from Canva's library. I prefer using Canva as I have to finish these designs in a day's time to still be relevant with the guest speakers talks.</p>
                 <div id="music">
                     <h3>Thank You Card for Akira Takeuchi</h3>
-                    <img src="img/Akira Takeuchi.png" src="A virtual card to thank Akira Takeuchi" width="30%" height="auto">
+                    <img src="img/Akira Takeuchi.png" src="A virtual card to thank Akira Takeuchi" width="550" height="auto">
                     <p>The guest speaker who had spoken that day is a talented musician so I wanted to give it a Broadway mood to it. Hence, I had tried to make it look musical.</p>
                 </div>
 
                 <div id="turtles">
                     <h3>Thank You Card for Emily</h3>
-                    <img src="img/Thank you.png" src="A virtual card for Emily" width="30%" height="auto">
+                    <img src="img/Thank you.png" src="A virtual card for Emily" width="550" height="auto">
                     <p>The guest speaker that day had expressed her love for turtles and wanting to have an office turtles. She had joked that those turtles would be tied to a balloon to avoid people walking on it. Hence, those circles are supposed to represent the balloons with what the students were thinking about the class.</p>
                 </div>
 
                 <div id="butterfly">
                     <h3>Thank You Card for Butterfly Garden</h3>
-                    <img src="img/ling.png" src="A virtual card for Butterfly Garden" width="30%" height="auto">
+                    <img src="img/ling.png" src="A virtual card for Butterfly Garden" width="550" height="auto">
                     <p>The speakers that day were representing Strong Musuem of Play and how they had used an AR exhbit to encourage donations to the musuem. After their talk, I wanted to have a feminine feel to it and hence used colors ranging from pink to maroon. I was inpired by Barbie with the fonts and wanted it to feel fairy like. Since butterflies are so pretty and mystical.</p>
                 </div>
             </div>
