--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <div id="xr">
                 <h2>xr</h2>
 
-                <div id="suburbs">
-                    <iframe width="560" height="300" src="https://www.youtube.com/embed/IssyYAXx_MU?si=F5RQ_Pw_AymdLA4B&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="suburbs">
+                    <iframe width="550" height="300" src="https://www.youtube.com/embed/IssyYAXx_MU?si=F5RQ_Pw_AymdLA4B&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h3>Suburbs</h3> <!--  <a href="https://github.com/IGME-209/dsa1-spring24-vaibhavyxx/tree/master/HW1/Hangman"><img src="img/logo.png" height= 2.5% width="auto"></a></a></h3>-->
                     <p>As a dedicated intern at a European company with an AR division in India, I had the opportunity to work on a groundbreaking project that combined augmented reality (AR) technology with web-based advertising for products. Leveraging my skills in HTML, CSS, JavaScript, and the A-Frame library, I developed a virtual environment of suburbs during my training period. This project received high praise from the company's founder, who recognized it as one of the best projects created by an intern.</p>
                     <p>The goal of this project was to explore the potential of web-based AR for advertising products in a virtual environment. By integrating AR technology into a web-based platform, we aimed to create an immersive and interactive experience for users to engage with various products in a suburban setting.</p>
