--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div id="ar-demo">
                     <h3>AR Demo <a href="https://people.rit.edu/vd5443/AR-Demo/"><img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a><a href="https://github.com/vaibhavyxx/AR-Demo"><img src="img/logo.png" height= 2.5% width="auto"></a> </h3>
                     <h4>Use this picture so that it works!</h4>
-                    <img src="img/pattern-marker.png" src="Picture to use for AR Marker to work" width="300" height="300">
+                    <img class="images" src="img/pattern-marker.png" src="Picture to use for AR Marker to work" width="300" height="300">
                     <h4>Preview of how it works</h4>
                     <video controls loop><source src ="img/AR-Demo-Preview.mp4" alt="A Preview of how it looks like" width="550" height="auto"></video>
                     <p>Developed using Ar.js and A-frame libraries along with HTML, CSS and JavaScript, it is a marker-based Web AR project. Since it is a web AR project, I had focused on polycount and stats for the scene to avoid phones from overheating so that everyone could try this experience out. I also wanted to develop my Garden project further into Augmented Reality so I had designed the house via code. I had added a sphere on top which would revolve arounf the house, similar to how in the original project, the UFO revolved in the sky. Adding on, I had ensured that my textures were added to specific faces of the shape so I had use libraries for those things. 
@@ -88,7 +88,7 @@
             <div id="web">
                 <h2>web development</h2>
                 <div id="rick">
-                    <img src="img/rick.jpg" width="550px" height="auto">
+                    <img class="images" src="img/rick.jpg" width="550px" height="auto">
                     <h3>Rick and Morty Search (JavaScript with REST API) <a href="https://people.rit.edu/vd5443/235/project2/">
                         <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>I developed a Rick and Morty search engine website, integrating a REST API with JavaScript, HTML, and CSS. 
@@ -115,7 +115,7 @@
 
                 <div id="alien-invasion">
                     <h3>Alien Invasions (Board Game)</h3>
-                    <img src="img/aliens-game.png" src="Board Game">
+                    <img class="images" src="img/aliens-game.png" src="Board Game">
                     <p>It is a strategy board game where players have to play as alien and ducks. It is an area control game where aliens have to guess the amount of ducks are present. It is an academic project where I had worked in a team of 5 people. I was responsible for updating the design document, finding playtesters for this game and improve the balance of the game. Since it was my first time building a board game, it had taught a lot about balance and how crucial is it for your game to be fun. </p>
                     <p><i>Read our <a href="https://docs.google.com/document/d/1hmG3Jw35hQb6FrqBQ5HL-0hen_l1Y0BA0sBmtQfHwOk/edit?usp=sharing"> design document</a> to know more!</i></p>
                 </div>
@@ -150,7 +150,7 @@
 
                 <div id="duck-in-the-chaos">
                     <h3>Duck in the Chaos (Physical Game)</h3>
-                    <img src="img/duck-in-the-chaos.jpeg" alt="game" width="300" height="auto">
+                    <img class="images" src="img/duck-in-the-chaos.jpeg" alt="game" width="300" height="auto">
                     <p>I had worked in an interdisplinary team at a conference to design this game. I had made it on our subtopics of 'play'.</p>
                 </div>
             </div>
@@ -160,19 +160,19 @@
                 <p>I have made all these designs using Canva. Hence, all the artwork used in it is from Canva's library. I prefer using Canva as I have to finish these designs in a day's time to still be relevant with the guest speakers talks.</p>
                 <div id="music">
                     <h3>Thank You Card for Akira Takeuchi</h3>
-                    <img src="img/Akira Takeuchi.png" src="A virtual card to thank Akira Takeuchi" width="300" height="auto">
+                    <img class="images" src="img/Akira Takeuchi.png" src="A virtual card to thank Akira Takeuchi" width="600" height="auto">
                     <p>The guest speaker who had spoken that day is a talented musician so I wanted to give it a Broadway mood to it. Hence, I had tried to make it look musical.</p>
                 </div>
 
                 <div id="turtles">
                     <h3>Thank You Card for Emily</h3>
-                    <img src="img/Thank you.png" src="A virtual card for Emily" width="300" height="auto">
+                    <img class="images" src="img/Thank you.png" src="A virtual card for Emily" width="600" height="auto">
                     <p>The guest speaker that day had expressed her love for turtles and wanting to have an office turtles. She had joked that those turtles would be tied to a balloon to avoid people walking on it. Hence, those circles are supposed to represent the balloons with what the students were thinking about the class.</p>
                 </div>
 
                 <div id="butterfly">
                     <h3>Thank You Card for Butterfly Garden</h3>
-                    <img src="img/ling.png" src="A virtual card for Butterfly Garden" width="300" height="auto">
+                    <img class="images" src="img/ling.png" src="A virtual card for Butterfly Garden" width="600" height="auto">
                     <p>The speakers that day were representing Strong Musuem of Play and how they had used an AR exhbit to encourage donations to the musuem. After their talk, I wanted to have a feminine feel to it and hence used colors ranging from pink to maroon. I was inpired by Barbie with the fonts and wanted it to feel fairy like. Since butterflies are so pretty and mystical.</p>
                 </div>
             </div>
