added more content

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
                 <div id="duck-in-the-chaos">
                     <h3>Duck in the Chaos (Physical Game)</h3>
                     <img class="images" src="img/duck-in-the-chaos.jpeg" alt="game" width="300" height="auto">
-                    <p>I had worked in an interdisplinary team at a conference to design this game. I had made it on our subtopics of 'play'.</p>
+                    <p>Duck in the Chaos was a fun project I worked on during the a2ru conference I attended earlier this year. It was an exciting experience, as I met so many people from different backgrounds and colleges, and we tried to work on one of the subtopics of play. What inspired all of us was the lack of structure in play that allowed people to express themselves freely.</p>
+                    <p>As a result, we came up with the idea of an Angry Bird-inspired game with different blocks for the player to set up. It would allow the player to decorate their box however they would like; then, they could use the shooter to try to break down their house if they felt like it. Initially, it was a two-person game where they would make each other’s fort. Then, they both have to protect their fort while trying to knock the other person down.</p>
                 </div>
             </div>
 
