a bug with the collapsible menu

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
     <head>
         <title>Vaibhavy</title>
-        <script src="script.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="icon" type="image/x-icon" href="icon/favicon.ico">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +17,6 @@
                     <li><a href="#projects">projects</a></li>
                 <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linkedin</a></li>
                 <li><a href="https://github.com/vaibhavyxx">github</a></li>
-                <li><a href="">resume</a></li>
                 <li><a href="#talk">let's talk</a></li>
             </ul>
         </div>
@@ -54,9 +52,8 @@
         
         <div id="projects">
             <h1>projects</h1>
+            <button type="button" class="collapsible"><h2>xr</h2></button>
             <div id="xr">
-                <h2>xr</h2>
-
                 <div class="suburbs">
                     <iframe width="550" height="300" src="https://www.youtube.com/embed/IssyYAXx_MU?si=F5RQ_Pw_AymdLA4B&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h3>Suburbs</h3> <!--  <a href="https://github.com/IGME-209/dsa1-spring24-vaibhavyxx/tree/master/HW1/Hangman"><img src="img/logo.png" height= 2.5% width="auto"></a></a></h3>-->
@@ -85,8 +82,8 @@
                 </div>
             </div>
 
+            <button type="button" class="collapsible"><h2>web development</h2></button>
             <div id="web">
-                <h2>web development</h2>
                 <div id="rick">
                     <img class="images" src="img/rick.jpg" width="550px" height="auto">
                     <h3>Rick and Morty Search (JavaScript with REST API) <a href="https://people.rit.edu/vd5443/235/project2/">
@@ -110,9 +107,8 @@
 
             </div>
             
+            <button type="button" class="collapsible"><h2>games</h2></button>
             <div id="games">
-                <h2>games</h2>
-
                 <div id="alien-invasion">
                     <h3>Alien Invasions (Board Game)</h3>
                     <img class="images" src="img/aliens-game.png" src="Board Game">
@@ -156,8 +152,8 @@
                 </div>
             </div>
 
+            <button type="button" class="collapsible"><h2>graphic design</h2></button>
             <div id="graphic-design">
-                <h2>graphic design</h2>
                 <p>I have made all these designs using Canva. Hence, all the artwork used in it is from Canva's library. I prefer using Canva as I have to finish these designs in a day's time to still be relevant with the guest speakers talks.</p>
                 <div id="music">
                     <h3>Thank You Card for Akira Takeuchi</h3>
@@ -198,4 +194,5 @@
         </div>
     </body>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </html>
