added another section

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
         <title>Vaibhavy</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="icon" type="image/x-icon" href="icon/favicon.ico">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">    
-</head>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+        <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    </head>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap');
     </style>
@@ -32,6 +33,12 @@
                 My goal is to push the boundaries of immersive experiences and make a meaningful impact in technology and entertainment.</p>
         </div>
 
+        <div id="edu">
+            <h2>education</h2>
+            <p>Sophomore at Rochester Insttitute of Technology
+            <br>Game Design and Development'26<br>
+            Honors Program (3.81)</p>
+        </div>
         <div id="skills">
             <h2>skills</h2>
             <ul>
