laid out basic css

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Liter&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
     <title>Vaibhavy's Page</title>
 </head>
 <body>
@@ -11,8 +15,10 @@
         <h3>my portfolio</h3>
     </header>
 
-    <img src="img/me2.jpg" alt="me" width="40%">
-    <p>Hi, I am Vaibhavy, pronounced as ve-bh-ve and I like to design and code immersive media including websites, games and hardware projects.</p>
+    <div id="intro">
+        <img src="img/me2.jpg" alt="me" width="40%">
+        <p>Hi, I am Vaibhavy, pronounced as ve-bh-ve and I like to design and code immersive media including websites, games and hardware projects.</p>
+    </div>
 
     <h2>featured projects</h2>
     <div class="featured-projects">
