--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <div id="nav">
         <ul>
-            <li>home</li>
-            <li>projects</li>
-            <li>resume</li>
-            <li>github</li>
-            <li>linked in</li>
-            <li>contact</li>
+            <li><a href="index.html">home</a></li>
+            <li><a href="pages/works.html">projects</a></li>
+            <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">resume</a></li>
+            <li><a href="https://github.com/vaibhavyxx">github</a></li>
+            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png">linked in</a></li>
+            <li><a href="mailto:vd5443@rit.edy">mail</a></li>
         </ul>
     </div>
 
@@ -81,7 +81,7 @@
                 <li>design</li>
                 <li>wordpress</li>
             </ul>
-            <img>
+            <img src="img/projects/ct logo.png" alt="letters c and t combined to make a happy face" width="30%" height="auto">
             <p>
                 I had freelanced for a startup in India to redesign their brand identity to make it match it more with their current line of work. As a result, I had come up with new colors, fonts and logos.
             </p>
