click function to display menu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="pages/works.html">projects</a></li>
             <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">resume</a></li>
             <li><a href="https://github.com/vaibhavyxx">github</a></li>
-            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png">linked in</a></li>
+            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
             <li><a href="mailto:vd5443@rit.edy">mail</a></li>
         </ul>
     </div>
@@ -94,4 +94,5 @@
         <a href="https://github.com/vaibhavyxx"><img src="img/social media/github.png" alt="github" width="50px" height="auto"></a>
     </footer>
 </body>
+<script src="src/main.js"></script>
 </html>
