--- a/pages/seam-hackathon.html
+++ b/pages/seam-hackathon.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Liter&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>journal-miniapp</title>
+    <link rel="stylesheet" href="../style/style.css">
+   
 </head>
 <body>
+    <!--header/navigation-->
+    <header> 
+        <img src="../icon/vd-icon.png" alt="logo" width="50px" height="50px">
+        <h3>my portfolio</h3>
+    </header>
+
+    <div id="nav">
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href="pages/works.html">projects</a></li>
+            <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">resume</a></li>
+            <li><a href="https://github.com/vaibhavyxx">github</a></li>
+            <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
+            <li><a href="mailto:vd5443@rit.edy">mail</a></li>
+        </ul>
+    </div>
+
     <h1>how i made journal app in 12 hours></h1>
     <h3>it was last august and i wanted to do seam mini-app hackathon</h3>
     <img src="">
@@ -23,11 +45,21 @@
         Initially, I had big plans as I wanted to make something ‘memorable’ but after understanding my skill sets, I had to scope down and make something that was easy to finish but looked polished enough. So, what started as a drawing app idea ended up being a journaling idea as I wanted users to make silly drawings to show the highlight of their day. Of course, I also wanted ‘stickers’ which are scaled-up emojis.
     </p>
     <p>
-        After hitting numerous roadblocks of why my code wasn’t working and wanting to give up, I eventually figured it out. I stack overflow my problems or just asked my family and friends if they could help me out with my bug. One way or the other, but by the eleventh hour, I was done and ready to submit it to the competition.
+        After hitting numerous roadblocks of why my code wasn't working and wanting to give up, I eventually figured it out. I stack overflow my problems or just asked my family and friends if they could help me out with my bug. One way or the other, but by the eleventh hour, I was done and ready to submit it to the competition.
     </p>
     <p>
-
-Flash forward, a few weeks later, I ended up being a finalist for the hackathon and my code got published into the app which is now available on Google Play Store and App Store. Though I did not win the contest it was my first solo-hack that I had actually finished and I felt accomplished.
+        Flash forward, a few weeks later, I ended up being a finalist for the hackathon and my code got published into the app which is now available on Google Play Store and App Store. Though I did not win the contest it was my first solo-hack that I had actually finished and I felt accomplished.
     </p>
+
+    <div id="socials">
+        <p>Feel free to check out my github here :&#41</p>
+        <a href="https://github.com/vaibhavyxx/Journal"><img src="../img/social media/github-black.png" alt="github" width="8%" height="auto"></a>
+    </div>
+
+    <footer>
+        Made with love, <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/social media/linked in.png" alt="linkedin" width="50px" height="auto"></a>,
+        <a href="https://github.com/vaibhavyxx"><img src="img/social media/github.png" alt="github" width="50px" height="auto"></a>
+    </footer>
 </body>
+<script src="../src/main.js"></script>
 </html>
