--- a/pages/seam-hackathon.html
+++ b/pages/seam-hackathon.html
@@ -19,9 +19,9 @@
 
     <div id="nav">
         <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="pages/works.html">projects</a></li>
-            <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing">resume</a></li>
+            <li><a href="../index.html">home</a></li>
+            <li><a href="works.html">projects</a></li>
+            <li><a href="https://docs.google.com/document/d/1FcL8CAqpWRULdBYmkpqJ6yPNVTm-Sm0vhMV5BwFsNac/edit?usp=sharing" target="_blank">resume</a></li>
             <li><a href="https://github.com/vaibhavyxx">github</a></li>
             <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a></li>
             <li><a href="mailto:vd5443@rit.edy">mail</a></li>
